[tool.poetry]
name = "t-ka-q-tasks"
version = "0.1.0"
description = ""
authors = ["Alexander Lyotov <sippie84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
